Minor fixes: - Add z-index on navigation drawer to ensure correct styling on mobile - Add underlines on links within SVGs - Comment .graph__dropdown CSS rule

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -8,3 +8,7 @@ h2.section-heading {
 a {
   text-decoration: none;
 }
+
+svg a:not([href$='#']) {
+  text-decoration: underline;
+}
